add proton sink
