# generator/docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api
 definitions:
+  handlers.JobResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      status:
+        $ref: '#/definitions/job.JobStatus'
+    type: object
   job.Job:
     properties:
       id:
@@ -159,7 +168,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/job.Job'
+            $ref: '#/definitions/handlers.JobResponse'
         "400":
           description: Bad Request
         "500":
@@ -204,7 +213,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/job.Job'
+            $ref: '#/definitions/handlers.JobResponse'
         "404":
           description: Not Found
       summary: get job by id.
